<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingLeft="16dp"
    android:paddingTop="10dp"
    android:paddingRight="16dp"
    android:background="#FAFAFA">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/record"
        android:layout_marginTop="16dp"
        />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:orientation="horizontal"
        android:layout_gravity="center"
        android:weightSum="2"
        >

        <ImageButton
            android:id="@+id/recordBtn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:adjustViewBounds="true"
            android:background="#FAFAFA"
            android:cropToPadding="false"
            app:srcCompat="@mipmap/ic_rec_audio"
            android:layout_marginRight="30dp"
            android:paddingBottom="16dp"
            />

        <ImageButton
            android:id="@+id/stopRecBtn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:adjustViewBounds="true"
            android:background="#FAFAFA"
            app:srcCompat="@mipmap/ic_stop_audio"
            android:layout_marginLeft="30dp"
            android:paddingBottom="16dp"/>
    </LinearLayout>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/replay"
        />

    <LinearLayout

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:orientation="horizontal"
        android:layout_gravity="center"
        android:weightSum="2"

        >

        <ImageButton
            android:id="@+id/playBtn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:adjustViewBounds="true"
            android:background="#FAFAFA"
            android:cropToPadding="false"
            app:srcCompat="@mipmap/ic_play_audio"
            android:layout_marginRight="30dp"
            android:paddingBottom="16dp"
            />

        <ImageButton
            android:id="@+id/pauseBtn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:adjustViewBounds="true"
            android:background="#FAFAFA"
            app:srcCompat="@mipmap/ic_pause_audio"
            android:layout_marginLeft="30dp"
            android:paddingBottom="16dp"
            />
    </LinearLayout>

    <Button
        android:id="@+id/saveBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:text="@string/save" />

    <Button
        android:id="@+id/closeBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/back" />

</LinearLayout>